--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 asgiref==3.5.2
 Django==4.0.4
+django-cors-headers==3.12.0
+django-environ==0.8.1
+django-rest-registration==0.7.2
 djangorestframework==3.13.1
+PyJWT==2.4.0
 pytz==2022.1
 sqlparse==0.4.2
