--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-environ==0.8.1
 django-rest-registration==0.7.2
 djangorestframework==3.13.1
 gunicorn==20.1.0
+psycopg2==2.9.3
 PyJWT==2.4.0
 pytz==2022.1
 sqlparse==0.4.2
